BERT + GPT model implementation

--- a/first draft notebook.ipynb
+++ b/first draft notebook.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "from transformers import AutoTokenizer, AutoModel\n",
+    "from transformers import AutoTokenizer, AutoModel, pipeline\n",
     "import torch\n",
     "\n",
     "#for not seing a warning message\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "query=\"Did the Greeks and the Romans have universities?\""
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
@@ -81,7 +81,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "769d0a71922d4d41b3f418520ecd7f88"
+       "model_id": "be82199561ed4fb98fda2137a070c9e0"
       }
      },
      "metadata": {},
@@ -91,10 +91,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\DTU - KID\\4. Semester\\Bachelor projekt AI\\KODE\\ChatGPT_Tutor_Project\\venv\\lib\\site-packages\\huggingface_hub\\file_download.py:129: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\anton\\.cache\\huggingface\\hub. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "C:\\Users\\lasse\\Desktop\\4. semester\\Fagprojekt\\venv\\lib\\site-packages\\huggingface_hub\\file_download.py:129: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\lasse\\.cache\\huggingface\\hub. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
       "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to see activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
       "  warnings.warn(message)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "Downloading (…)lve/main/config.json:   0%|          | 0.00/570 [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "b14311b0f30442c29a3c966235cc7dfc"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -102,7 +114,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "c427c1264a104255bdb7a3d76bca66e0"
+       "model_id": "79cd0f4ca26f40f69dbc549b93f8c59d"
       }
      },
      "metadata": {},
@@ -114,7 +126,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "3d82c9367e0046bd937509a249893817"
+       "model_id": "760bc10ca4884f1d89525a3e4e47bc0c"
       }
      },
      "metadata": {},
@@ -126,7 +138,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "7c401e3ef60d41f3b5b645540bdfe1dc"
+       "model_id": "8aae695279b64ac28da11b6ab2171852"
       }
      },
      "metadata": {},
@@ -157,13 +169,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In northern Europe the origin of universities must be sought at Paris, in the cathedral school of Notre-Dame. By the beginning of the twelfth century in France and the Low Countries learning was no longer confined to monasteries but had its most active centres in the schools attached to cathedrals, of which the most famous were those of Liège, Rheims, Laon, Paris, Orleans, and Chartres. The most notable of these schools of the liberal arts was probably Chartres, distinguished by a canonist like St. Ives and by famous teachers of classics and philosophy like Bernard and Thierry. As early as 991 a monk of Rheims, Richer, describes the hardships of his journey to Chartres in order to study the Aphorisms of Hippocrates of Cos; while from the twelfth century John of Salisbury, the leading northern humanist of the age, has left us an[20] account of the masters which we shall later have occasion to cite. Nowhere else today can we drop back more easily into a cathedral city of the twelfth century, the peaceful town still dominated by its church and sharing, now as then,\n"
+      "I\n",
+      "THE EARLIEST UNIVERSITIES\n",
+      "Universities, like cathedrals and parliaments, are a product of the Middle Ages. The Greeks and the Romans, strange as it may seem, had no universities in the sense in which the word has been used for the past seven or eight centuries. They had higher education, but the terms are not synonymous. Much of their instruction in law, rhetoric, and philosophy it would be hard to surpass, but it was not organized into the form of permanent institutions of learning. A great teacher like Socrates gave no diplomas; if a modern student sat at his feet for three months, he would demand a certificate,[4] something tangible and external to show for it—an excellent theme, by the way, for a Socratic dialogue. Only in the twelfth and thirteenth centuries do there emerge in the world those features of organized education with which we are most familiar, all that machinery of instruction represented by faculties and colleges and courses of study, examinations and commencements and academic degrees. In all these matters we are the heirs and successors, not of Athens and Alexandria, but of Paris and Bologna.\n"
      ]
     }
    ],
@@ -178,10 +192,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "outputs": [],
    "source": [
-    "prompt=f\"You are a friendly and helpful chatbot. your job is to give a short and relevant answer to a given question, based on a specific background context. The context is: '{top_answers}'. Please give a relevant answer to the following question. Question: {query}. Answer:\"\n"
+    "from transformers import pipeline"
    ],
    "metadata": {
     "collapsed": false
@@ -189,7 +212,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Downloading (…)lve/main/config.json:   0%|          | 0.00/571 [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "1acfd9dce7e84669be924240bc94e8db"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Downloading (…)\"pytorch_model.bin\";:   0%|          | 0.00/496M [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "ba67d6a6940648b78a69399d0d915e1a"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Downloading (…)okenizer_config.json:   0%|          | 0.00/79.0 [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "164c480678dd41d0936517e2341927a5"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Downloading (…)olve/main/vocab.json:   0%|          | 0.00/899k [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "53421579c72b43798a58082970efd46f"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Downloading (…)olve/main/merges.txt:   0%|          | 0.00/456k [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "57b9476a8a124675981f078a4575ea41"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Downloading (…)cial_tokens_map.json:   0%|          | 0.00/772 [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "cbad87af214c4ec39095af1ba14b7c55"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "oracle = pipeline(model=\"deepset/roberta-base-squad2\", tokenizer=\"deepset/roberta-base-squad2\")\n",
+    "Bert_topK = oracle(query, top_answers, top_k=5)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[{'score': 0.26762381196022034,\n  'start': 109,\n  'end': 179,\n  'answer': 'The Greeks and the Romans, strange as it may seem, had no universities'},\n {'score': 0.2206006497144699,\n  'start': 164,\n  'end': 179,\n  'answer': 'no universities'},\n {'score': 0.14598335325717926,\n  'start': 160,\n  'end': 179,\n  'answer': 'had no universities'},\n {'score': 0.07087451964616776,\n  'start': 109,\n  'end': 166,\n  'answer': 'The Greeks and the Romans, strange as it may seem, had no'},\n {'score': 0.05842142552137375, 'start': 164, 'end': 166, 'answer': 'no'}]"
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Bert_topK"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [],
+   "source": [
+    "prompt=f\"You are a friendly and helpful chatbot. your job is to give a short and relevant answer to a given question, based on a specific background context. The context is: '{top_answers}'. Please give a relevant answer to the following question. Question: {query}. Answer: {Bert_topK[0]['answer']}\"\n",
+    "\n",
+    "# prompt=f\"You are a friendly and helpful chatbot. your job is to give a short and relevant answer to a given question. Please give a relevant answer to the following question. Question: {query}. Answer:\"\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stderr",
@@ -200,19 +341,27 @@
     },
     {
      "data": {
-      "text/plain": "[{'generated_text': \"You are a friendly and helpful chatbot. your job is to give a short and relevant answer to a given question, based on a specific background context. The context is: 'In northern Europe the origin of universities must be sought at Paris, in the cathedral school of Notre-Dame. By the beginning of the twelfth century in France and the Low Countries learning was no longer confined to monasteries but had its most active centres in the schools attached to cathedrals, of which the most famous were those of Liège, Rheims, Laon, Paris, Orleans, and Chartres. The most notable of these schools of the liberal arts was probably Chartres, distinguished by a canonist like St. Ives and by famous teachers of classics and philosophy like Bernard and Thierry. As early as 991 a monk of Rheims, Richer, describes the hardships of his journey to Chartres in order to study the Aphorisms of Hippocrates of Cos; while from the twelfth century John of Salisbury, the leading northern humanist of the age, has left us an[20] account of the masters which we shall later have occasion to cite. Nowhere else today can we drop back more easily into a cathedral city of the twelfth century, the peaceful town still dominated by its church and sharing, now as then,'. Please give a relevant answer to the following question. Question: Did the Greeks and the Romans have universities?. Answer: Yes. The Greek Universities were set up at Athens, at Thebes, at Miletus, and at other large places. The term university has its origin in the Greek term u-pos, meaning 'common' or 'civil'. The universities were schools of learning which gave an opportunity, in antiquity, to bring together a cross section of knowledge from different disciplines in order to develop them. A Roman universities were also set up in Rome, as was the so-called University of Rome, with the aim of providing an extensive library with the Greek classics and other subjects. In the 12th century the Roman authorities established the University of Florence in the city of Siena, in Italy, which became the most important of the German universities. In 1487, Pope Innocent III ordered that in every European country a new university should be built. The idea was that, in the future, all of Europe, with the exception of the Mediterranean, should become one intellectual society and every one should be allowed, according to his abilities, to pursue a scientific and pedagogical interest from the universities. At first, most of the Latin and German universities were built but as soon as it became clear that the world would become a more important place, they were also built in Italy and in France and Belgium. The first Universities were established and developed not in the countries of the Far East (most notably Russia, China, Korea, and Japan) but in the old Roman Empire, the old Greek Empire\"}]"
+      "text/plain": "[{'generated_text': \"You are a friendly and helpful chatbot. your job is to give a short and relevant answer to a given question, based on a specific background context. The context is: 'I\\nTHE EARLIEST UNIVERSITIES\\nUniversities, like cathedrals and parliaments, are a product of the Middle Ages. The Greeks and the Romans, strange as it may seem, had no universities in the sense in which the word has been used for the past seven or eight centuries. They had higher education, but the terms are not synonymous. Much of their instruction in law, rhetoric, and philosophy it would be hard to surpass, but it was not organized into the form of permanent institutions of learning. A great teacher like Socrates gave no diplomas; if a modern student sat at his feet for three months, he would demand a certificate,[4] something tangible and external to show for it—an excellent theme, by the way, for a Socratic dialogue. Only in the twelfth and thirteenth centuries do there emerge in the world those features of organized education with which we are most familiar, all that machinery of instruction represented by faculties and colleges and courses of study, examinations and commencements and academic degrees. In all these matters we are the heirs and successors, not of Athens and Alexandria, but of Paris and Bologna.'. Please give a relevant answer to the following question. Question: Did the Greeks and the Romans have universities?. Answer: The Greeks and the Romans, strange as it may seem, had no universities in the sense in which the word has been used for the past seven or eight centuries. They had higher education, but the terms are not synonymous. Much of their instruction in law, rhetoric, and philosophy it would be hard to surpass, but it was not organized into the form of permanent institutions of learning. A great teacher like Socrates gave no diplomas; if a modern student sat at his feet for three months, he would demand a\"}]"
      },
-     "execution_count": 40,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from transformers import pipeline\n",
     "#Feed the relevant sentences and query to a GPT model to generate a response\n",
     "generator = pipeline(\"text-generation\", model=\"gpt2-large\")\n",
-    "generator(prompt, max_length=600, do_sample=True)"
+    "generator(prompt, max_length=400, do_sample=True)"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
